Fixed the button jumpiness

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3414,6 +3414,7 @@
                 bottom: 10px;
                 /*font-family: "SansSerif";*/
                 /*width: 30%;*/
+                padding-left: 10px;
             }
             
             #settings:hover {
@@ -3421,7 +3422,7 @@
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
                 border-radius: 5px;
-                padding: 4px 0 4px 10px;
+                padding: 4px 0 0px 10px;
             }
 
     /* Logout */
@@ -3439,7 +3440,7 @@
                 transition-property: color, background-color;
                 transition-duration: 200ms;
                 transition-timing-function: ease-in-out;
-                padding: 4px 0 4px 10px;
+                padding: 4px 0 4px 0px;
                 /*transform: translateX(-1px);*/
                 cursor: default;
                 -moz-border-radius: 5px;
@@ -3448,6 +3449,7 @@
             }
             #logout-button {
                 /*width: 30%;*/
+                padding: 4px 0 4px 10px
             }
             @media (max-width: 575px) {
                 #settings: hover {
@@ -3455,7 +3457,7 @@
                     -moz-border-radius: 5px;
                     -webkit-border-radius: 5px;
                     border-radius: 5px;
-                    padding: 4px 0 4px 10px;
+                    padding: 4px 0 4px 0px;
                 }
 
                 #logout {
@@ -3482,7 +3484,6 @@
                     -webkit-border-radius: 5px;
                     border-radius: 5px;
                     padding: 4px 0 4px 10px;
-                    /*transform: translateX(-1px);*/
 
                 }
 
